fix: add text-overflow to job

--- a/blocks/profile/__job/profile__job.css
+++ b/blocks/profile/__job/profile__job.css
@@ -4,6 +4,10 @@
     font-size: 18px;
     line-height: 22px;
     margin: 16px 0 0;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+    overflow: hidden;
+    max-width: 500px;
 }
 
 @media screen and (max-width:768px) {
